# finite_state_machine

./: README.md  pyproject.toml
finite_state_machine/: main.py
